# ems-form

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
config/: config.toml.example
src/: __main__.py
src/application/app/: bot.py
src/bot/: __init__.py
src/bot/bot/: __init__.py  base.py  ems.py
src/bot/modal/: form.py
src/bot/view/: agree.py
src/core/config/: base.py  toml.py
src/core/config/sections/: discord.py
src/infrastructure/app/: discord.py
