[tool.poetry]
name = "ems-form"
version = "0.1.0"
description = ""
authors = ["rafailmdzdv <rafayt323@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
discord = "^2.3.2"
uvloop = "^0.20.0"


[tool.poetry.group.lint.dependencies]
pre-commit = "^3.8.0"
ruff = "^0.6.3"
mypy = "^1.11.2"
flake8-override = "^0.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
